# whl-dash

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: agent-task.md  plan-issue.md
.github/PULL_REQUEST_TEMPLATE/: agent-pr.md
.github/workflows/: ci.yml
scripts/: init_bazel.sh
whl_dash/: dashboard.py  data.py  main.py  template.py  templates.json
